--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,9 @@
     "paths": {
       "@task-management-system/task-management-system/task-tree/shared": [
         "libs/task-management-system/task-tree/shared/src/index.ts"
+      ],
+      "@task-management-system/task-management-system/task-tree/smart": [
+        "libs/task-management-system/task-tree/smart/src/index.ts"
       ]
     }
   },
