create task tree ui library

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,9 @@
       ],
       "@task-management-system/task-management-system/task-tree/smart": [
         "libs/task-management-system/task-tree/smart/src/index.ts"
+      ],
+      "@task-management-system/task-management-system/task-tree/ui": [
+        "libs/task-management-system/task-tree/ui/src/index.ts"
       ]
     }
   },
